# conflict-based-search

./: .$a_star_proof.drawio.bkp  .gitignore  2012 Conflict-Based Search For Optimal Multi-Agent Path Finding.md  A_star.pptx  CBS.pptx  CMakeLists.txt  README.md  a_star.cpp  a_star.hpp  a_star_main.cpp  a_star_readme.md  analyze_result.py  cbs_main.cpp  draw_path.py  experimental_results.csv  high_level.cpp  high_level.hpp  low_level.cpp  low_level.hpp  result.txt  util.cpp  util.hpp
.run/: a_star_mine.run.xml  cbs_mine.run.xml  group_cbs.run.xml
benchmark/: map_32by32_obst204_agents10_ex0.txt
benchmark/32x32_obst204_txt/: map_32by32_obst204_agents100_ex0.txt  map_32by32_obst204_agents100_ex1.txt  map_32by32_obst204_agents100_ex10.txt  map_32by32_obst204_agents100_ex11.txt  map_32by32_obst204_agents100_ex12.txt  map_32by32_obst204_agents100_ex13.txt  map_32by32_obst204_agents100_ex14.txt  map_32by32_obst204_agents100_ex15.txt  map_32by32_obst204_agents100_ex16.txt  map_32by32_obst204_agents100_ex17.txt  map_32by32_obst204_agents100_ex18.txt  map_32by32_obst204_agents100_ex19.txt  map_32by32_obst204_agents100_ex2.txt  map_32by32_obst204_agents100_ex20.txt  map_32by32_obst204_agents100_ex21.txt  map_32by32_obst204_agents100_ex22.txt  map_32by32_obst204_agents100_ex23.txt  map_32by32_obst204_agents100_ex24.txt  map_32by32_obst204_agents100_ex25.txt  map_32by32_obst204_agents100_ex26.txt  map_32by32_obst204_agents100_ex27.txt  (+979 more)
doc/: 1968 A formal basis for the heuristic determination of minimum cost paths.md
result/: experimental_results.csv
(+2001 files in other folders)
